syntax = "proto3";

option csharp_namespace = "grpcArachne";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
service LoginToken {
  rpc GetLoginToken(LoginTokenRequest) returns (LoginTokenReturns);
}

message LoginTokenRequest{
	string NomorSeri = 1;
}

message LoginTokenReturns{
	string Token = 1;
	int64 IdPerangkat= 2;
	string NomorSeri = 3;
}